# auto_ticket

./: .gitignore  README.md
api/: actions.py  faq_data.csv  faq_gen.py  main.py  pyproject.toml
api/api/api/: settings.py  urls.py
api/api/support/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
api/api/support/migrations/: 0001_initial.py  0002_ticket.py
api/data/documents/: data.txt  question.txt
api/local-chatbot/documents/: data.txt  question.txt
api/src/: app.py  learn.py  server.py
api/support/api/: admin.py  learn.py  models.py  serializers.py  urls.py  utils.py  views.py
api/support/api/migrations/: 0001_initial.py
api/support/support/: settings.py
model/src/: main.ipynb
web/: package.json
web/src/app/: back-to-school-books.tsx  chatbot.tsx  hero.tsx  layout.tsx  page.tsx  top-book-categories.tsx
web/src/components/: chatbot.tsx  footer.tsx  navbar.tsx
